                            CHANGES IN VERSION 0.11.0 (April 2021)

USER LEVEL CHANGES

-- Add new `posterior_predictive_branch` MCMC sampler, which is
   automatically assigned to trailing dependency node networks of entirely
   non-data nodes (jointly posterior predictive branches).  This sampler
   simulates jointly from the predictive distribtion of these posterior
   predictive node branches, and is designed to improve MCMC mixing of the
   branch, and consequently of the entire model (PR #1086).

-- Allow use of elliptical slice sampler for univariate nodes, which can be
   useful in multimodal problems (PR #1109).

-- Add a `getParents` method to the model API, allowing one to determine parent
   nodes, analogous to use of `getDependencies` to determine child nodes
   (PR #1094).

-- Add `getConditionallyIndependentSets` method (not yet documented) to the model
   API, allowing one to determine nodes that are conditionally independent of
   each other given parent nodes (PR #1094).

-- Improve efficiency of conjugate samplers by avoiding unneeded calculations
   when a conjugate relationship does not involve shifting or scaling (PR #1087).

-- Allow use of `nimNumeric`, `nimMatrix`, `nimArray` in model code (PR #1096).

-- Add progress bar to `getSamplesDPmeasure` (NCT issue 110).

-- Allow model definition using `if` without `else`, fixing a longstanding
   oversight (PR #1104).

-- Improve warning when multiple nodes provided to `getParam` (PR #1118).

-- Check during model building for unnamed elements of `data` and `inits`
   (PR #1117).

-- Remove error trapping to prevent use of variables in defining node names,
   such as `getDependencies('y[idx]')` as this is hard to check robustly and
   efficiently (PR #1122).

-- Improve error messages when reporting `getParam` cannot calculate a parameter
   when checking a model (PR #1112).

-- Error trap cases where model nodes are defined in two different declarations,