@@ -1,3 +1,13 @@
+USER LEVEL CHANGES
+
+BUG FIXES
+
+-- Fix to the `posterior_predictive_branch` MCMC sampler, to update
+   the log-probabilities of the sampled posterior predictive nodes.
+
+DEVELOPER LEVEL CHANGES
+
+
                             CHANGES IN VERSION 0.11.0 (April 2021)
 
 USER LEVEL CHANGES
